crates/glyph-cli/tests/corpus/valid/goal_const_ref.glyph
skill demo()
    description: "Demo."
    goal: success_criterion
    flow:
        "Do."

const success_criterion = "Find the root cause and ship the smallest safe change."
