crates/glyph-cli/tests/corpus/invalid/goal_cardinality_violation.glyph
skill demo()
    description: "Demo."
    goal:
        "First goal."
        "Second goal."
    flow:
        "Do."
